--- a/metrics/examples/kafka/kafka-metrics.yaml
+++ b/metrics/examples/kafka/kafka-metrics.yaml
@@ -156,8 +156,8 @@ spec:
       # standalone Zookeeper
       - pattern: "org.apache.ZooKeeperService<name0=StandaloneServer_port(\\d+)><>(\\w+)"
         name: "zookeeper_$2"
-      - pattern: "org.apache.ZooKeeperService<name0=StandaloneServer_port(\\d+), name1=InMemoryDataTree><>(\\w+)"
-        name: "zookeeper_$2"
+      - pattern: "org.apache.ZooKeeperService<name0=StandaloneServer_port(\\d+), name1=(InMemoryDataTree)><>(\\w+)"
+        name: "zookeeper_$2_$3"
   entityOperator:
     topicOperator: {}
     userOperator: {}
