--- a/docker-images/Makefile
+++ b/docker-images/Makefile
@@ -1,6 +1,6 @@
 SUBDIRS=java-base kafka-base zookeeper kafka kafka-connect kafka-connect/s2i \
         stunnel-base zookeeper-stunnel kafka-stunnel entity-operator-stunnel \
-        test-client
+        test-client kafka-mirror-maker
 DOCKER_TARGETS=docker_build docker_push docker_tag
 
 all: $(SUBDIRS)
