--- a/examples/install/cluster-operator/045-Crd-kafkamirrormaker.yaml
+++ b/examples/install/cluster-operator/045-Crd-kafkamirrormaker.yaml
@@ -25,6 +25,8 @@ spec:
             replicas:
               type: integer
               minimum: 1
+            image:
+              type: string
             whitelist:
               type: string
             consumer:
@@ -32,6 +34,7 @@ spec:
               properties:
                 numStreams:
                   type: integer
+                  minimum: 1
                 groupId:
                   type: string
                 bootstrapServers:
@@ -86,7 +89,6 @@ spec:
                   required:
                   - trustedCertificates
               required:
-              - numStreams
               - groupId
               - bootstrapServers
             producer:
@@ -145,17 +147,27 @@ spec:
                   - trustedCertificates
               required:
               - bootstrapServers
-            logging:
+            resources:
               type: object
               properties:
-                loggers:
+                limits:
                   type: object
-                name:
-                  type: string
-                type:
-                  type: string
-            metrics:
-              type: object
+                  properties:
+                    cpu:
+                      type: string
+                      pattern: '[0-9]+m?$'
+                    memory:
+                      type: string
+                      pattern: '[0-9]+([kKmMgGtTpPeE]i?)?$'
+                requests:
+                  type: object
+                  properties:
+                    cpu:
+                      type: string
+                      pattern: '[0-9]+m?$'
+                    memory:
+                      type: string
+                      pattern: '[0-9]+([kKmMgGtTpPeE]i?)?$'
             affinity:
               type: object
               properties:
@@ -338,38 +350,6 @@ spec:
                               type: string
                           topologyKey:
                             type: string
-            jvmOptions:
-              type: object
-              properties:
-                -XX:
-                  type: object
-                -Xms:
-                  type: string
-                  pattern: '[0-9]+[mMgG]?'
-                -Xmx:
-                  type: string
-                  pattern: '[0-9]+[mMgG]?'
-            resources:
-              type: object
-              properties:
-                limits:
-                  type: object
-                  properties:
-                    cpu:
-                      type: string
-                      pattern: '[0-9]+m?$'
-                    memory:
-                      type: string
-                      pattern: '[0-9]+([kKmMgGtTpPeE]i?)?$'
-                requests:
-                  type: object
-                  properties:
-                    cpu:
-                      type: string
-                      pattern: '[0-9]+m?$'
-                    memory:
-                      type: string
-                      pattern: '[0-9]+([kKmMgGtTpPeE]i?)?$'
             tolerations:
               type: array
               items:
@@ -385,5 +365,29 @@ spec:
                     type: integer
                   value:
                     type: string
+            jvmOptions:
+              type: object
+              properties:
+                -XX:
+                  type: object
+                -Xms:
+                  type: string
+                  pattern: '[0-9]+[mMgG]?'
+                -Xmx:
+                  type: string
+                  pattern: '[0-9]+[mMgG]?'
+            logging:
+              type: object
+              properties:
+                loggers:
+                  type: object
+                name:
+                  type: string
+                type:
+                  type: string
+            metrics:
+              type: object
           required:
           - replicas
+          - consumer
+          - producer
